--- a/DocumentCapture/Base.lproj/Main.storyboard
+++ b/DocumentCapture/Base.lproj/Main.storyboard
@@ -21,26 +21,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPO-2y-uxX">
-                                <rect key="frame" x="134" y="318" width="106" height="30"/>
-                                <state key="normal" title="Start Capturing"/>
-                                <connections>
-                                    <action selector="startCapturingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CAK-u7-wBv"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeO-GF-qOJ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="562"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tZg-Hu-1zd">
+                                <rect key="frame" x="0.0" y="582" width="375" height="85"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y1r-pH-6jl">
+                                        <rect key="frame" x="170.5" y="27.5" width="34" height="30"/>
+                                        <state key="normal" title="Start"/>
+                                        <connections>
+                                            <action selector="startCapturingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GEj-EU-vt9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EwW-l3-S9e">
+                                        <rect key="frame" x="335" y="27" width="32" height="30"/>
+                                        <state key="normal" title="Stop"/>
+                                        <connections>
+                                            <action selector="stopCapturingTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bt1-g5-Xgd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="y1r-pH-6jl" firstAttribute="centerX" secondItem="tZg-Hu-1zd" secondAttribute="centerX" id="3mj-bi-7WM"/>
+                                    <constraint firstItem="EwW-l3-S9e" firstAttribute="top" secondItem="tZg-Hu-1zd" secondAttribute="top" constant="27" id="9Cs-Xq-4Sc"/>
+                                    <constraint firstItem="y1r-pH-6jl" firstAttribute="centerY" secondItem="tZg-Hu-1zd" secondAttribute="centerY" id="9sf-wR-1aa"/>
+                                    <constraint firstAttribute="bottom" secondItem="EwW-l3-S9e" secondAttribute="bottom" constant="28" id="FGD-jN-Gcm"/>
+                                    <constraint firstAttribute="trailing" secondItem="EwW-l3-S9e" secondAttribute="trailing" constant="8" id="VX5-ET-HQc"/>
+                                    <constraint firstAttribute="height" constant="85" id="tjw-tK-If5"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="RPO-2y-uxX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="euz-jt-OEh"/>
-                            <constraint firstItem="RPO-2y-uxX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="txi-1h-TWz"/>
+                            <constraint firstItem="tZg-Hu-1zd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Pj-Qz-qiG"/>
+                            <constraint firstAttribute="trailing" secondItem="zeO-GF-qOJ" secondAttribute="trailing" id="7ng-YD-CYB"/>
+                            <constraint firstAttribute="trailing" secondItem="tZg-Hu-1zd" secondAttribute="trailing" id="T6L-pm-Wc3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tZg-Hu-1zd" secondAttribute="bottom" id="Wh7-XS-Yem"/>
+                            <constraint firstItem="zeO-GF-qOJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aqx-i0-AWP"/>
+                            <constraint firstItem="zeO-GF-qOJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="fJk-I5-hnZ"/>
+                            <constraint firstItem="tZg-Hu-1zd" firstAttribute="top" secondItem="zeO-GF-qOJ" secondAttribute="bottom" id="m7G-Es-5Pe"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="backgroundView" destination="8bC-Xf-vdC" id="Oan-TI-4OA"/>
+                        <outlet property="videoPreviewView" destination="zeO-GF-qOJ" id="XZc-0F-Ifa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
